force-app/main/default/objects/Quote_route__c/Quote_route__c.object-meta.xml
<CustomObject>
    <label>Quote Route</label>
    <nameField>
        <displayFormat>QR-{00000}</displayFormat>
        <label>Quote route ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>