force-app/main/default/objects/Quote_route__c/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <formula>Route__r.Route__r.DestinationCountry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Country</label>
    <type>Text</type>
</CustomField>