force-app/main/default/objects/Quote_route__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipName>Quote_route</relationshipName>
    <type>Lookup</type>
</CustomField>