force-app/main/default/objects/Quote_route__c/fields/Inquiry_Route__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry Route</label>
    <referenceTo>InquiryRoute__c</referenceTo>
    <relationshipName>Quote_route</relationshipName>
    <type>Lookup</type>
</CustomField>