force-app/main/default/objects/Quote_route__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>