force-app/main/default/objects/Quote_route__c/fields/Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Country__c</fullName>
    <formula>Route__r.Route__r.OriginCountry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Country</label>
    <type>Text</type>
</CustomField>