force-app/main/default/objects/Quote_route__c/fields/POLAOL__c.field-meta.xml
<CustomField>
    <fullName>POLAOL__c</fullName>
    <formula>Route__r.Route__r.From__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P.O.L(A.O.L)</label>
    <type>Text</type>
</CustomField>