force-app/main/default/objects/Quote_route__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote ID</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>Quote_route</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>