force-app/main/default/objects/Quote_route__c/fields/Quote_Route__c.field-meta.xml
<CustomField>
    <fullName>Quote_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipName>Quote_route</relationshipName>
    <type>Lookup</type>
</CustomField>