force-app/main/default/objects/Quote_route__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipName>Quote_route</relationshipName>
    <type>Lookup</type>
</CustomField>