force-app/main/default/objects/Quote_route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Inquiry__c</columns>
    <columns>Quote__c</columns>
    <columns>Quote_Route__c</columns>
    <columns>Inquiry_Route__c</columns>
    <columns>Origin_Country__c</columns>
    <columns>POLAOL__c</columns>
    <columns>PickUpAddress__c</columns>
    <columns>Destination_Country__c</columns>
    <columns>PODAOD__c</columns>
    <columns>DeliveryAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>